[gd_scene load_steps=45 format=3 uid="uid://usadl1sdgmbn"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_u8eem"]
[ext_resource type="Texture2D" uid="uid://ceggibk1660cj" path="res://Assets/player/hurt/1.png" id="2_25cbl"]
[ext_resource type="Texture2D" uid="uid://bn4egyfsey54l" path="res://Assets/player/andar_michael.png" id="2_a8l64"]
[ext_resource type="Texture2D" uid="uid://dht57ouaof410" path="res://Assets/player/parado/1.png" id="2_kadg5"]
[ext_resource type="Texture2D" uid="uid://cdivx1licmwhm" path="res://Assets/player/pulando/2.png" id="3_waknx"]
[ext_resource type="Texture2D" uid="uid://bmahf0sxhseai" path="res://Assets/player/run-shoot/1.png" id="6_pxmvk"]
[ext_resource type="Texture2D" uid="uid://ixy0tqifdbxc" path="res://Assets/player/run-shoot/2.png" id="7_qa260"]
[ext_resource type="Texture2D" uid="uid://cra4dnb80roex" path="res://Assets/player/run-shoot/3.png" id="8_7vm75"]
[ext_resource type="Texture2D" uid="uid://qjtlam8dae75" path="res://Assets/player/run-shoot/4.png" id="9_5mfjy"]
[ext_resource type="Texture2D" uid="uid://cg6vygmlwt3i0" path="res://Assets/player/run-shoot/5.png" id="10_7n6nw"]
[ext_resource type="Texture2D" uid="uid://cw1cc2h816wel" path="res://Assets/player/run-shoot/6.png" id="11_sym1n"]
[ext_resource type="Texture2D" uid="uid://cjyebgck2dg0c" path="res://Assets/player/run-shoot/7.png" id="12_ulud6"]
[ext_resource type="Texture2D" uid="uid://bag2ytlrb7ip3" path="res://Assets/player/run-shoot/8.png" id="13_ftxe2"]
[ext_resource type="Texture2D" uid="uid://cxx14j3vu8205" path="res://Assets/player/run-shoot/9.png" id="14_mtyg1"]
[ext_resource type="Texture2D" uid="uid://cdgb6l6osgf3s" path="res://Assets/player/run-shoot/10.png" id="15_qy404"]
[ext_resource type="Texture2D" uid="uid://bbunv545k3d83" path="res://Assets/player/run-shoot/11.png" id="16_d62cj"]
[ext_resource type="Texture2D" uid="uid://mklkda4y7tj2" path="res://Assets/player/run-shoot/12.png" id="17_0kgsw"]
[ext_resource type="Texture2D" uid="uid://d4kfsuyqjc706" path="res://Assets/player/run-shoot/13.png" id="18_ycxqv"]
[ext_resource type="Texture2D" uid="uid://bhqnaa5p3jv78" path="res://Assets/player/run-shoot/14.png" id="19_r20y5"]
[ext_resource type="Texture2D" uid="uid://luttqyxkhvab" path="res://Assets/player/run-shoot/15.png" id="20_wlg2g"]
[ext_resource type="Texture2D" uid="uid://c1x6cwvypjffw" path="res://Assets/player/run-shoot/16.png" id="21_5lwxd"]
[ext_resource type="Texture2D" uid="uid://ckakfygonndlt" path="res://Assets/player/atirando-inseticida/2.png" id="22_1om5f"]
[ext_resource type="AudioStream" uid="uid://yrpwqtfaw4hq" path="res://sounds/jump_sfx.wav" id="23_0agfb"]
[ext_resource type="AudioStream" uid="uid://bhrey0hxs6dof" path="res://sounds/shot.wav" id="24_jiyy3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_redmo"]
atlas = ExtResource("3_waknx")
region = Rect2(0, 0, 33, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tg3t"]
atlas = ExtResource("2_a8l64")
region = Rect2(5, 0, 26, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrjms"]
atlas = ExtResource("2_a8l64")
region = Rect2(31, 0, 26, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_0eexk"]
atlas = ExtResource("2_a8l64")
region = Rect2(57, 0, 26, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_00mu2"]
atlas = ExtResource("2_a8l64")
region = Rect2(83, 0, 26, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xtu2"]
atlas = ExtResource("2_a8l64")
region = Rect2(109, 0, 26, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmu7n"]
atlas = ExtResource("2_a8l64")
region = Rect2(135, 0, 26, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_daull"]
atlas = ExtResource("2_a8l64")
region = Rect2(161, 0, 26, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_i411c"]
atlas = ExtResource("2_a8l64")
region = Rect2(187, 0, 26, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_fa4fl"]
atlas = ExtResource("2_a8l64")
region = Rect2(213, 0, 26, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbfgg"]
atlas = ExtResource("2_a8l64")
region = Rect2(239, 0, 26, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8yj1"]
atlas = ExtResource("2_a8l64")
region = Rect2(265, 0, 26, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_kn8pc"]
atlas = ExtResource("2_a8l64")
region = Rect2(291, 0, 26, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4owp"]
atlas = ExtResource("2_a8l64")
region = Rect2(317, 0, 26, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlj0f"]
atlas = ExtResource("2_a8l64")
region = Rect2(343, 0, 26, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_2u610"]
atlas = ExtResource("2_a8l64")
region = Rect2(369, 0, 26, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7q17"]
atlas = ExtResource("22_1om5f")
region = Rect2(0, 0, 55, 54)

[sub_resource type="SpriteFrames" id="SpriteFrames_lxfek"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_25cbl")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_kadg5")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_redmo")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tg3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrjms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0eexk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00mu2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xtu2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmu7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_daull")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i411c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fa4fl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbfgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8yj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kn8pc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4owp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlj0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2u610")
}],
"loop": true,
"name": &"run",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_pxmvk")
}, {
"duration": 1.0,
"texture": ExtResource("7_qa260")
}, {
"duration": 1.0,
"texture": ExtResource("8_7vm75")
}, {
"duration": 1.0,
"texture": ExtResource("9_5mfjy")
}, {
"duration": 1.0,
"texture": ExtResource("10_7n6nw")
}, {
"duration": 1.0,
"texture": ExtResource("11_sym1n")
}, {
"duration": 1.0,
"texture": ExtResource("12_ulud6")
}, {
"duration": 1.0,
"texture": ExtResource("13_ftxe2")
}, {
"duration": 1.0,
"texture": ExtResource("14_mtyg1")
}, {
"duration": 1.0,
"texture": ExtResource("15_qy404")
}, {
"duration": 1.0,
"texture": ExtResource("16_d62cj")
}, {
"duration": 1.0,
"texture": ExtResource("17_0kgsw")
}, {
"duration": 1.0,
"texture": ExtResource("18_ycxqv")
}, {
"duration": 1.0,
"texture": ExtResource("19_r20y5")
}, {
"duration": 1.0,
"texture": ExtResource("20_wlg2g")
}, {
"duration": 1.0,
"texture": ExtResource("21_5lwxd")
}],
"loop": true,
"name": &"run_shoot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7q17")
}],
"loop": true,
"name": &"shoot",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ojml7"]
size = Vector2(20, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_odsdw"]
size = Vector2(27, 44)

[node name="player" type="CharacterBody2D"]
position = Vector2(10, 320)
collision_mask = 22
script = ExtResource("1_u8eem")

[node name="animator" type="AnimationPlayer" parent="."]

[node name="animation" type="AnimatedSprite2D" parent="."]
position = Vector2(0.999999, -19.5)
scale = Vector2(0.872727, 0.944445)
sprite_frames = SubResource("SpriteFrames_lxfek")
animation = &"hurt"
autoplay = "idle"

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -26)
shape = SubResource("RectangleShape2D_ojml7")

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="collision" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(-0.5, -29)
shape = SubResource("RectangleShape2D_odsdw")
debug_color = Color(0.62037, 0.35395, 1, 0.42)

[node name="remote" type="RemoteTransform2D" parent="."]

[node name="ray_right" type="RayCast2D" parent="."]
position = Vector2(6, -28)
scale = Vector2(1, 9)
target_position = Vector2(13, 0.111111)
collision_mask = 4
hit_from_inside = true

[node name="ray_right2" type="RayCast2D" parent="."]
position = Vector2(6, -28)
scale = Vector2(1, 9)
target_position = Vector2(10, -2)
collision_mask = 4
hit_from_inside = true

[node name="ray_right3" type="RayCast2D" parent="."]
position = Vector2(6, -28)
scale = Vector2(1, 9)
target_position = Vector2(11, 1.55555)
collision_mask = 4
hit_from_inside = true

[node name="ray_left" type="RayCast2D" parent="."]
position = Vector2(-6, -27)
scale = Vector2(1, 9)
target_position = Vector2(-14, -0.222225)
collision_mask = 4
hit_from_inside = true

[node name="ray_left2" type="RayCast2D" parent="."]
position = Vector2(-6, -27)
scale = Vector2(1, 9)
target_position = Vector2(-13, -1.77778)
collision_mask = 4
hit_from_inside = true

[node name="ray_left3" type="RayCast2D" parent="."]
position = Vector2(-6, -27)
scale = Vector2(1, 9)
target_position = Vector2(-13, 1.22222)
collision_mask = 4
hit_from_inside = true

[node name="jump_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("23_0agfb")
volume_db = 1.0

[node name="shot_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("24_jiyy3")
volume_db = -12.0

[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
